feat(mod-03): sebd msg
