# internal/repositories/messages/api.go
@@ -1,0 +1,28 @@
+package messages
+
+import (
+	"context"
+	"errors"
+
+	"github.com/dndev-xx/go-ninja-chat/internal/types"
+)
+
+var ErrMsgNotFound = errors.New("message not found")
+
+func (r *Repo) GetMessageByRequestID(ctx context.Context, reqID types.RequestID) (*Message, error) {
+	// FIXME
+	return nil, nil
+}
+
+// CreateClientVisible creates a message that is visible only to the client.
+func (r *Repo) CreateClientVisible(
+	ctx context.Context,
+	reqID types.RequestID,
+	problemID types.ProblemID,
+	chatID types.ChatID,
+	authorID types.UserID,
+	msgBody string,
+) (*Message, error) {
+	// FIXME
+	return nil, nil
+}
